# birecursion-schemes

./: LICENSE  README.md  birecursion-schemes.cabal
src/Data/: Biindexed.hs  Bipathed.hs  Birecursive.hs  Dipathed.hs  Direcursive.hs  Indexed.hs  Pathed.hs  Recursive.hs  Snake.hs  Sourced.hs
src/Data/Direcursive/: List.hs
