cabal-version:  3.0
name:           birecursion-schemes
version:        0.0.1
license:        NONE
author:         Leo Dillinger
maintainer:     leo@apotheca.io
build-type:     Simple
description:
    This is a library for mono-, di- and bi- recursion schemes.

    By extending recursion to functors with base bi-functors, we can
    build recursive stacks that allow you to perform actions while
    mapping over the functor content.

    This is especially useful for partial / distributed data structures.

flag no-recursion-schemes
  description:       Do not depend on 'recursion-schemes' library
  default:           False
  manual:            True

library
    exposed-modules:
        Data.Recursive
        Data.Direcursive
        Data.Birecursive
    other-modules:
        Paths_birecursion_schemes
    default-extensions:
        ConstraintKinds
        FlexibleContexts
        NoImplicitPrelude
        OverloadedStrings
        QuantifiedConstraints
        RankNTypes
        TypeFamilies
        TypeOperators
    build-depends:
        base >= 4 && < 5,
        bifunctors
    if flag(no-recursion-schemes)
        cpp-options: -DNO_RECURSION_SCHEMES
    else
        build-depends:
            recursion-schemes
    hs-source-dirs:   src
    default-language: Haskell2010

    